# PolyLin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  definitions.hpp  stack.hpp
include/: base.hpp  definitions.hpp  deque.hpp  priorityqueue.hpp  queue.hpp  reader.hpp  set.hpp  stack.hpp  util.hpp
include/commons/: interval_tree.hpp  mem_alloc.hpp  queue_set.hpp  segment_tree.hpp
report/: .gitignore  acmart.cls  macros.tex  main.tex  packages.tex  references.bib
report/algos/: empty-check.tex  pq-lin.tex  queue-lin.tex  set-lin.tex  stack-lin.tex
report/sections/: 1_prelim.tex  2_simple.tex  4_set.tex  5_stack.tex  6_queue.tex  8_pqueue.tex  9_empirical.tex  appendix.tex
scripts/: .gitignore  PQueueHistGen.py  QueueHistGen.py  StackHistGen.py  common.yml  commons.py  format_history.py  polylin-verilin.py  polylin-violin.py  prodcon-ms  prodcon-treiber  runtests.py  scal-polylin.py
src/: definitions.hpp  deque.cpp  deque.hpp  engine.cpp  polylin.cpp  pqueue_histgen.cpp  priorityqueue.cpp  queue.cpp  queue.hpp  reader.hpp  set_histgen.cpp  stack.cpp  stack.hpp  util.hpp
src/commons/: interval_tree.hpp  interval_tree_fwd.hpp  interval_types.hpp  segment_tree.hpp
tests/: runtests.py  test_config.csv
tests/bs-kfifo/: format_history.py  prodcon-bs-kfifo  runtests.sh
tests/kstack/: format_history.py  prodcon-kstack  runtests.sh
tests/ms/: format_history.py  genhist.sh  prodcon-ms  runtests.sh
tests/treiber/: format_history.py  genhist.sh  prodcon-treiber  runtests.sh
tests/ts-deque/: format_history.py  prodcon-ts-atomic-deque  runtests.sh
